scaffold/typescript-go-main/testdata/baselines/reference/submodule/compiler/jsEnumCrossFileExport.errors.txt
enumDef.js(14,21): error TS1003: Identifier expected.
index.js(4,17): error TS2702: 'Host' only refers to a type, but is being used as a namespace here.
index.js(13,11): error TS2702: 'Host' only refers to a type, but is being used as a namespace here.
index.js(18,11): error TS2702: 'Host' only refers to a type, but is being used as a namespace here.


==== enumDef.js (1 errors) ====
    var Host = {};
    Host.UserMetrics = {};
    /** @enum {number} */
    Host.UserMetrics.Action = {
        WindowDocked: 1,
        WindowUndocked: 2,
        ScriptsBreakpointSet: 3,
        TimelineStarted: 4,
    };
    /**
     * @typedef {string} Host.UserMetrics.Bargh
     */
    /**
     * @typedef {string}
                        
     */
    
!!! error TS1003: Identifier expected.
    Host.UserMetrics.Blah = {
        x: 12
    }
==== index.js (3 errors) ====
    var Other = {};
    Other.Cls = class {
        /**
         * @param {!Host.UserMetrics.Action} p
                    ~~~~
!!! error TS2702: 'Host' only refers to a type, but is being used as a namespace here.
         */
        method(p) {}
        usage() {
            this.method(Host.UserMetrics.Action.WindowDocked);
        }
    }
    
    /**
     * @type {Host.UserMetrics.Bargh}
              ~~~~
!!! error TS2702: 'Host' only refers to a type, but is being used as a namespace here.
     */
    var x = "ok";
    
    /**
     * @type {Host.UserMetrics.Blah}
              ~~~~
!!! error TS2702: 'Host' only refers to a type, but is being used as a namespace here.
     */
    var y = "ok";
    